--- a/src/app/shared/components/ui/ultra-reliable/ultra-reliable.component.html
+++ b/src/app/shared/components/ui/ultra-reliable/ultra-reliable.component.html
@@ -1,5 +1,5 @@
 <div class="mt-6 w-full p-4 lg:mt-16 lg:p-0">
-  <h2 class="mb-6 text-2xl font-bold">PLUZ GROUP BLOGS</h2>
+  <h2 class="mb-6 text-2xl font-bold">Ultra-Reliable, Safe & Precise Tools for</h2>
   <div class="mt-6 grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3">
     @for (item of industries; track $index) {
       <div class="group relative h-180 cursor-pointer overflow-hidden rounded-2xl">
@@ -30,7 +30,7 @@
         <button
           pButton
           label="Know more"
-          class="bg-green-custom absolute bottom-20 left-1/2 -translate-x-1/2 rounded-md px-6 py-2 font-semibold text-white shadow-md transition-all hover:bg-green-700"
+          class="bg-green-custom! hover:bg-green-custom! absolute bottom-20 left-1/2 -translate-x-1/2 rounded-md border-none! px-6 py-2 font-semibold text-white shadow-md transition-all"
         ></button>
       </div>
     }
