--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -32,7 +32,7 @@
   </div>
 </div>
 
-<app-popular-product></app-popular-product>
+<app-popular-product title="Featured Products"></app-popular-product>
 <app-ultra-reliable></app-ultra-reliable>
 
 <app-blog></app-blog>
