--- a/src/app/view/product/product-details/product-details.component.html
+++ b/src/app/view/product/product-details/product-details.component.html
@@ -32,4 +32,4 @@
   ></app-product-overview>
 </div>
 
-<app-popular-product></app-popular-product>
+<app-popular-product [centerTitle]="true"></app-popular-product>
