--- a/src/app/view/product/product-details/product-overview/product-overview.component.html
+++ b/src/app/view/product/product-details/product-overview/product-overview.component.html
@@ -91,7 +91,7 @@
             <button
               pButton
               label="Download"
-              class="rounded-lg border-none bg-green-600 px-5 py-2 text-white"
+              class="bg-green-custom! rounded-lg border-none px-5 py-2 text-white"
             ></button>
           </div>
         </div>
