--- a/src/app/shared/components/ui/ehpm-table/ehpm-table.component.html
+++ b/src/app/shared/components/ui/ehpm-table/ehpm-table.component.html
@@ -2,7 +2,7 @@
   <table class="w-full border-collapse text-sm">
     <thead>
       <!-- TOP HEADER ROW -->
-      <tr class="bg-green-400 text-center text-white">
+      <tr class="bg-green-custom text-center text-white">
         <ng-container *ngFor="let h of headers.top; let i = index">
           <th
             class="border border-black p-3 font-semibold"
@@ -13,7 +13,7 @@
       </tr>
 
       <!-- BOTTOM HEADER ROW -->
-      <tr class="bg-green-400 text-center text-xs text-white">
+      <tr class="bg-green-custom text-center text-xs text-white">
         <ng-container *ngFor="let h of headers.bottom">
           <th class="border border-black p-1" [innerHTML]="h.label"></th>
         </ng-container>
