--- a/src/app/shared/components/ui/popular-product/popular-product.component.html
+++ b/src/app/shared/components/ui/popular-product/popular-product.component.html
@@ -1,12 +1,14 @@
 <div class="mt-6 w-full p-4 lg:mt-16 lg:p-0">
-  <h2 class="mb-6 ml-4 text-2xl font-bold">{{ title }}</h2>
+  <div [class]="centerTitle ? 'flex items-center justify-center' : ''">
+    <h2 class="mb-6 ml-4 text-2xl font-bold">{{ title }}</h2>
+  </div>
   <div class="grid grid-cols-1 gap-6 lg:grid-cols-4">
     @for (item of products; track $index) {
       <div
-        class="group flex flex-col items-center rounded-xl p-4 text-center transition-all duration-300 hover:shadow-lg"
+        class="group flex w-80 flex-col items-center rounded-xl p-4 text-center transition-all duration-300"
       >
         <div
-          class="group-hover:border-green-custom flex w-full flex-1 flex-col items-center border border-gray-200 p-4"
+          class="group-hover:shadow-green-custom flex w-full flex-1 flex-col items-center border border-gray-200 p-4 group-hover:shadow-lg"
         >
           <!-- Title -->
           <h3 class="mt-4 text-lg font-semibold">{{ item.title }}</h3>
@@ -21,7 +23,8 @@
         <button
           pButton
           label="View"
-          class="group-hover:bg-green-custom! mt-4 w-full rounded-md border! border-gray-300! bg-white! py-2 text-sm font-semibold text-black! transition-all duration-300 group-hover:text-white!"
+          [routerLink]="item.RouterName"
+          class="group-hover:bg-green-custom! mt-4 w-full rounded-none! border! border-gray-300! bg-white! py-2 text-sm font-semibold text-black! transition-all duration-300 group-hover:text-white!"
         ></button>
       </div>
     }
